assets/css/styles.css
/* ... */
.white-vertion .mh-header.nav-3 .navbar-nav li.active a {
  border-color: transparent;
}

.white-vertion .mh-footer .form-control {
  -webkit-box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  color: #000;
}

.white-vertion .mh-footer .form-control:focus {
  -webkit-box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
}

.white-vertion .mh-footer .contact-message {
  -webkit-box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  color: #000;
}

.white-vertion .mh-footer .contact-message:focus {
  -webkit-box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
}

.white-vertion .mh-footer-2 .form-control {
  -webkit-box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
}

.white-vertion .mh-footer-2 .form-control:focus {
  -webkit-box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
}

.white-vertion .mh-footer-2 .contact-message {
  -webkit-box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
}

.white-vertion .mh-footer-2 .contact-message:focus {
  -webkit-box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
  box-shadow: 0 0px 1px 0 rgba(40, 40, 40, 0.8),
    0 0px 1px 0px rgba(40, 40, 40, 0.8);
}

.white-vertion .mh-blog .mh-blog-item .blog-inner h1 a {
  color: #202026;
}

.white-vertion .shadow-1 {
  -webkit-box-shadow: 0px 10px 20px 4px #00000015;
  box-shadow: 0px 10px 20px 4px #00000015;
}

.white-vertion .mh-pricing .mh-pricing {
  -webkit-box-shadow: 0px 10px 20px 4px #00000015;
  box-shadow: 0px 10px 20px 4px #00000015;
}

.white-vertion .mh-blog .mh-blog-item {
  -webkit-box-shadow: 0px 10px 20px 4px #00000015;
  box-shadow: 0px 10px 20px 4px #00000015;
}

.white-vertion .mh-experince .mh-education-deatils .mh-education-item {
  -webkit-box-shadow: 0px 10px 20px 4px #00000015;
  box-shadow: 0px 10px 20px 4px #00000015;
}

.white-vertion .mh-work .mh-experience-deatils .mh-work-item {
  -webkit-box-shadow: 0px 10px 20px 4px #00000015;
  box-shadow: 0px 10px 20px 4px #00000015;
}

.white-vertion .mh-testimonial .mh-client-item {
  -webkit-box-shadow: 0px 10px 20px 4px #00000015;
  box-shadow: 0px 10px 20px 4px #00000015;
}

.white-vertion.home-slider .mh-home .img-border {
  border: 20px solid rgba(0, 0, 0, 0.52);
}

.white-vertion.home-slider .mh-home .img-border {
  border-color: rgba(0, 0, 0, 0.62);
}

.white-vertion.home-slider .mh-home .hero-img img {
  border-color: rgba(0, 0, 0, 0.4);
}

.white-vertion.home-slider .img-color-overlay {
  background-color: rgba(255, 247, 247, 0.6);
}

.white-vertion.home-slider .mh-black-header .img-color-overlay {
  background-color: rgba(0, 0, 0, 0.6);
}

.white-vertion.home-slider .mh-black-header h1,
.white-vertion.home-slider .mh-black-header h4,
.white-vertion.home-slider .mh-black-header ul li,
.white-vertion.home-slider .mh-black-header a,
.white-vertion.home-slider .mh-black-header address {
  color: #fff;
}

.white-vertion.home-video .mh-black-header .img-color-overlay {
  background-color: rgba(0, 0, 0, 0.7);
}

.white-vertion.home-video .mh-black-header h1,
.white-vertion.home-video .mh-black-header h4,
.white-vertion.home-video .mh-black-header ul li,
.white-vertion.home-video .mh-black-header a,
.white-vertion.home-video .mh-black-header address {
  color: #fff;
  opacity: 0.9;
}

.white-vertion .mh-header.white-header.nav-strict .navbar-nav li a {
  color: #000;
}

.white-vertion .mh-header.white-header.nav-strict .navbar-nav li.active a {
  border-color: #000;
}

.white-vertion .mh-header.white-header .navbar-nav li a {
  color: #fff;
  opacity: 0.9;
}

.white-vertion .mh-header.white-header .navbar-nav li.active a {
  border-color: #fff;
}

.dark-vertion {
  opacity: 0.9;
}

/* Full-page modern blue gradient so html is covered when body has dark theme */
html:has(body.dark-vertion.black-bg) {
  background: var(--bg-gradient);
  background-attachment: fixed;
  min-height: 100%;
}

.dark-vertion.black-bg {
  background: var(--bg-gradient);
  background-attachment: fixed;
  min-height: 100vh;
}

/* Bokeh overlay: soft orbs + light specks (sitting on top of gradient) */
.dark-vertion.black-bg::before {
  content: '';
  position: fixed;
  inset: 0;
  pointer-events: none;
  background-image: var(--bg-gradient-bokeh);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  z-index: 0;
}

/* Give content stacking above bokeh; exclude header so it keeps position:fixed */
.dark-vertion.black-bg > *:not(.fancybox-container):not(header) {
  position: relative;
  z-index: 1;
}

/* Keep fixed nav above other content and preserve its fixed positioning */
.dark-vertion.black-bg > header.mh-header {
  z-index: 1000;
}

.dark-vertion .section-loader {
  background: var(--bg-gradient);
}

.dark-vertion ::-webkit-input-placeholder {
  color: #fff;
}

.dark-vertion :-ms-input-placeholder {
  color: #fff;
}

.dark-vertion ::-ms-input-placeholder {
  color: #fff;
}

.dark-vertion ::placeholder {
  color: #fff;
}

.dark-vertion a {
  color: #fff;
}

.dark-vertion h1 {
  color: #fff;
}

.dark-vertion h3 {
  color: #fff;
}

.dark-vertion h4 {
  color: #fff;
}

.dark-vertion h5 {
  color: #fff;
}

.dark-vertion h6 {
  color: #fff;
}
/* ... */

